end project hoping to be right

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="students">
         <ul id="mystudent">
             Gli studenti della classe sono : 
-            <li id="otherstudents"></li>
+            <span id="otherstudents"></span>
         </ul>
         <span></span>
         <span id="request"></span>
